Added V 0.0.1 download link

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>eta</title>
   </head>
   <body>
-    <a href="http://www.google.com">Download</a>
+    <p>Verison 0.0.1</p>
+    <a href="https://drive.google.com/file/d/1SAA4IAYkcetag5DGpKyrhGbD-zssx0T3/view?usp=sharing">Download</a>
   </body>
 </html>
