--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title>eta</title>
   </head>
   <body>
+    <p>Version 0.0.2</p>
+    <a href="https://drive.google.com/file/d/1tBCBQ8jQs1U54mRWi5Cg2r88iGuLxHrA/view?usp=sharing">Download</a>
     <p>Verison 0.0.1</p>
     <a href="https://drive.google.com/file/d/1SAA4IAYkcetag5DGpKyrhGbD-zssx0T3/view?usp=sharing">Download</a>
   </body>
